# saf

./: .clang-format  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/benchmark/: benchmark.cpp
apps/binary_file_writer/: binary_file_writer.cpp
apps/cd_detector/: cd_detector.cpp
apps/classifier/: classifier.cpp
apps/detector/: detector.cpp
apps/encoder/: encoder.cpp
apps/face_detector/: CMakeLists.txt  face_detector.cpp
apps/flow_control/: flow_control.cpp
apps/frame_writer/: frame_writer.cpp
apps/gige/: gige.cpp  gige_file_writer.cpp  gige_file_writer.h
apps/jpeg_writer/: jpeg_writer.cpp
apps/people/: people.cpp
apps/pipeline/: CMakeLists.txt  pipeline.cpp
apps/pubsub/: CMakeLists.txt  publish.cpp  subscribe.cpp
apps/recorder/: recorder.cpp
apps/rpc/: CMakeLists.txt  rpc_receiver.cpp  rpc_sender.cpp
apps/rtsp_sender/: rtsp_sender.cpp
apps/save_vishashes/: save_vishashes.cpp
apps/segmentation/: segmentation.cpp
apps/simple/: simple.cpp
apps/split_nne/: CMakeLists.txt  split_nne.cpp
apps/tracker/: tracker.cpp
apps/train_detector/: CMakeLists.txt  framesdb.xml  litesql_writer.cpp  litesql_writer.h
apps/visualizer/: visualizer.cpp
apps/writer/: writer.cpp
cmake/: build.cmake  clangformat.cmake  summary.cmake
config/: cameras.toml.example  config.toml.example  models.toml.example
patches/: 0001-Increase-max-channels-to-1024.patch  0001-Set-LICENSE_FILE-in-relation-to-current-CMakeLists.t.patch
src/: CMakeLists.txt  saf.h
src/api/python/: framepy.cpp  framepy.h  readerpy.cpp  readerpy.h  safpy.cpp  safpy.h
src/camera/: camera.cpp  camera.h  camera_manager.cpp  camera_manager.h  gst_camera.cpp  gst_camera.h  pgr_camera.cpp  pgr_camera.h  vimba_camera.cpp  vimba_camera.h
src/common/: context.h  serialization.h  timer.h  types.cpp  types.h
src/cvsdk/: common.hpp  cvsdk_base.cpp  cvsdk_base.h  ext_list.hpp
src/model/: caffe_model.cpp  caffe_model.h  cvsdk_model.cpp  cvsdk_model.h  model.cpp  model.h  model_manager.cpp  model_manager.h  tf_model.cpp  tf_model.h
src/ncs/: ncs.h  ncs_manager.cpp  ncs_manager.h
src/operator/: binary_file_writer.cpp  binary_file_writer.h  buffer.cpp  buffer.h  caffe_facenet.cpp  caffe_facenet.h  compressor.cpp  compressor.h  display.cpp  display.h  face_tracker.cpp  face_tracker.h  frame_writer.cpp  frame_writer.h  image_classifier.cpp  image_classifier.h  image_segmenter.cpp  image_segmenter.h  image_transformer.cpp  image_transformer.h  jpeg_writer.cpp  jpeg_writer.h  neural_net_consumer.cpp  neural_net_consumer.h  neural_net_evaluator.cpp  neural_net_evaluator.h  opencv_motion_detector.cpp  opencv_motion_detector.h  opencv_optical_flow.cpp  opencv_optical_flow.h  operator.cpp  operator.h  operator_factory.cpp  operator_factory.h  rtsp_sender.cpp  rtsp_sender.h  strider.cpp  strider.h  temporal_region_selector.cpp  temporal_region_selector.h  (+2 more)
src/operator/detectors/: caffe_mobilenet_ssd_detector.cpp  caffe_mobilenet_ssd_detector.h  caffe_mtcnn_face_detector.cpp  caffe_mtcnn_face_detector.h  caffe_yolo_detector.cpp  caffe_yolo_detector.h  caffe_yolo_v2_detector.cpp  caffe_yolo_v2_detector.h  cvsdk_ssd_detector.cpp  cvsdk_ssd_detector.h  frcnn_detector.cpp  frcnn_detector.h  ncs_yolo_detector.cpp  ncs_yolo_detector.h  object_detector.cpp  object_detector.h  opencv_face_detector.cpp  opencv_face_detector.h  opencv_people_detector.cpp  opencv_people_detector.h  ssd_detector.cpp  ssd_detector.h
src/operator/extractors/: caffe_feature_extractor.cpp  caffe_feature_extractor.h  cvsdk_feature_extractor.cpp  cvsdk_feature_extractor.h  feature_extractor.cpp  feature_extractor.h
src/operator/flow_control/: flow_control_entrance.cpp  flow_control_entrance.h  flow_control_exit.cpp  flow_control_exit.h
src/operator/matchers/: euclidean_matcher.h  object_matcher.cpp  object_matcher.h  xqda_matcher.h
src/operator/pubsub/: frame_publisher.cpp  frame_publisher.h  frame_subscriber.cpp  frame_subscriber.h
src/operator/receivers/: kafka_receiver.h  mqtt_receiver.h  receiver.cpp  receiver.h  websocket_receiver.h
src/operator/rpc/: frame_receiver.cpp  frame_receiver.h  frame_sender.cpp  frame_sender.h  saf_rpc.proto
src/operator/senders/: kafka_sender.h  mqtt_sender.h  sender.cpp  sender.h  websocket_sender.h
src/operator/trackers/: dlib_tracker.h  kf_tracker.h  object_tracker.cpp  object_tracker.h
src/operator/writers/: file_writer.h  writer.cpp  writer.h
src/pipeline/: pipeline.cpp  pipeline.h
src/proto/: saf.proto
src/stream/: frame.cpp  frame.h  stream.cpp  stream.h
src/utils/: cuda_utils.h  cv_utils.h  file_utils.h  fp16.h  gst_utils.h  hash_utils.h  image_utils.h  math_utils.h  output_tracker.cpp  output_tracker.h  perf_utils.h  string_utils.h  time_utils.h  utils.h  yolo_utils.h
src/video/: gst_video_capture.cpp  gst_video_capture.h  gst_video_encoder.cpp  gst_video_encoder.h
test/: CMakeLists.txt  saf_gtest_main.cpp  test_camera_manager.cpp  test_context.cpp  test_gst_camera.cpp  test_gst_video_encoder.cpp  test_model_manager.cpp  test_nne_caffe.cpp  test_simple.cpp  test_stream.cpp  test_strider.cpp  test_string_utils.cpp  test_tinytoml.cpp  test_types.cpp
test/config/: cameras.toml  config.toml  models.toml
test/data/inception/caffe_ground_truth/: inception_3a.3x3_reduce.expect  inception_3a.5x5.expect  inception_3a.5x5_reduce.expect  inception_3b.1x1.expect  inception_3b.3x3_reduce.expect  inception_3b.pool.expect  inception_4a.output_inception_4a.output_0_split.expect  inception_4a.relu_3x3.expect  inception_4b.5x5_reduce.expect  inception_4b.relu_3x3.expect  inception_4b.relu_3x3_reduce.expect  inception_4b.relu_5x5.expect  inception_4c.output.expect  inception_4c.relu_3x3_reduce.expect  inception_4d.5x5.expect  inception_4d.5x5_reduce.expect  inception_4d.relu_3x3_reduce.expect  inception_4e.3x3_reduce.expect  inception_5a.relu_5x5.expect  inception_5a.relu_5x5_reduce.expect  inception_5b.3x3.expect  loss3.classifier.expect  pool5.drop_7x7_s1.expect  prob.expect
test/data/mobilenet/: mobilenet_deploy.prototxt
(+52 files in other folders)
